syntax = "proto3";

package otelp2;

import "exchange.proto";

option go_package = "encodings/otelp2";


// Unary exporter service definition.
service UnaryExporter {
    rpc ExportTraces(TraceExportRequest) returns (ExportResponse) {}
    //rpc ExportMetrics(MetricExportRequest) returns (ExportResponse) {}
}

// Streaming exporter service definition.
service StreamExporter {
    rpc ExportTraces(stream TraceExportRequest) returns (stream ExportResponse) {}
    //rpc ExportMetrics(stream MetricExportRequest) returns (stream ExportResponse) {}
}

